// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> error renders 1`] = `
<div>
  <input
    aria-labelledby="input-1-label input-1-error"
    id="input-1"
    type="radio"
    value=""
  />
  <label
    for="input-1"
    id="input-1-label"
  >
    Label
  </label>
  <span
    id="input-1-error"
    role="alert"
  >
    Error
  </span>
</div>
`;

exports[`<Radio /> help renders 1`] = `
<div>
  <input
    aria-labelledby="input-1-label"
    id="input-1"
    type="radio"
    value=""
  />
  <label
    for="input-1"
    id="input-1-label"
  >
    Label
    <span>
      Help
    </span>
  </label>
</div>
`;

exports[`<Radio /> label renders 1`] = `
<div>
  <input
    aria-labelledby="input-1-label"
    id="input-1"
    type="radio"
    value=""
  />
  <label
    for="input-1"
    id="input-1-label"
  >
    Label
  </label>
</div>
`;

exports[`<Radio /> renders 1`] = `
<div>
  <input
    id="input-1"
    type="radio"
    value=""
  />
</div>
`;
